# test-for-me

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: ci.yml
example/: mini.py
src/: main.py
tests/: test_main.py
